--- a/kubernetes/apps/default/homepage/app/ocirepository.yaml
+++ b/kubernetes/apps/default/homepage/app/ocirepository.yaml
@@ -1,10 +1,13 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
 metadata:
-  name: app-template
-  namespace: flux-system
+  name: homepage
 spec:
-  interval: 12h
+  interval: 15m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 4.5.0
   url: oci://ghcr.io/bjw-s-labs/helm/app-template
