--- a/kubernetes/apps/default/homepage/app/helmrelease.yaml
+++ b/kubernetes/apps/default/homepage/app/helmrelease.yaml
@@ -38,9 +38,6 @@ spec:
               PUID: 1000
               PGID: 1000
               TZ: America/Chicago
-            envFrom:
-              - secretRef:
-                  name: homepage-secret
             probes:
               liveness:
                 enabled: true
@@ -76,6 +73,7 @@ spec:
         parentRefs:
           - name: envoy-external
             namespace: network
+            sectionName: https
         rules:
           - backendRefs:
               - port: *port
