--- a/kubernetes/apps/default/homepage/app/resources/widgets.yaml
+++ b/kubernetes/apps/default/homepage/app/resources/widgets.yaml
@@ -8,7 +8,7 @@
       cpu: true
       memory: true
       showLabel: true
-      label: "plygrnd"
+      label: "Olympus"
     nodes:
       show: true
       cpu: true
@@ -16,7 +16,7 @@
       showLabel: true
 
 - search:
-    provider: duckduckgo
+    provider: google
     target: _blank
 
 - datetime:
